--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
 <link rel="preconnect" href="https://cdn.tailwindcss.com">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 <!-- 🛡 Security Headers -->
 <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.tailwindcss.com https://unpkg.com https://www.google.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://fonts.googleapis.com; img-src 'self' data:; font-src 'self' https://fonts.gstatic.com; frame-src https://www.google.com; form-action 'self' https://formspree.io; object-src 'none'; base-uri 'self';">
 <meta http-equiv="X-Content-Type-Options" content="nosniff">
@@ -17,12 +18,29 @@
 <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, max-age=0">
   <link rel="icon" type="image/x-icon" href="/assets/favicon.png" />
   <script src="https://cdn.tailwindcss.com"></script>
+  tailwind.config = {
+    theme: {
+      extend: {
+        colors: {
+          armadilloBlack: "#1A1A1A",
+          armadilloGray: "#4A4A4A",
+          oliveGreen: "#6B7B3C",
+          oliveDark: "#55622F",
+          offWhite: "#F8F9FA"
+        },
+        fontFamily: {
+          inter: ["Inter", "sans-serif"]
+        }
+      }
+    }
+  };
+</script>
   <style>
     @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
     .fade-in { animation: fadeIn 1s ease-out both; }
   </style>
 </head>
-<body class="flex flex-col min-h-screen bg-gray-900 text-gray-100 font-sans">
+<body class="flex flex-col min-h-screen bg-armadilloBlack text-offWhite font-inter">
 
   <!-- Header -->
   <header class="text-center pt-8 max-w-3xl mx-auto fade-in">
@@ -30,12 +48,12 @@
   </header>
 
   <!-- Navigation -->
-  <nav class="bg-gray-800 py-3 rounded-md mb-8 max-w-xl mx-auto fade-in">
+  <nav class="bg-armadilloGray py-3 rounded-md mb-8 max-w-xl mx-auto fade-in">
     <div class="flex justify-between">
-      <a href="/index.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Home</a>
-      <a href="/services.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Services</a>
-      <a href="/about.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">About</a>
-      <a href="/contact.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Contact</a>
+      <a href="/index.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">Home</a>
+      <a href="/services.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">Services</a>
+      <a href="/about.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">About</a>
+      <a href="/contact.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">Contact</a>
     </div>
   </nav>
 
@@ -43,16 +61,16 @@
   <main class="flex-grow max-w-3xl mx-auto px-6 py-12 space-y-12 fade-in">
     
     <!-- Intro -->
-    <section class="bg-gray-800 rounded-lg shadow-lg p-8 text-center">
-      <h1 class="text-3xl font-bold text-teal-400 mb-4">About Iron Dillo Cybersecurity</h1>
-      <p class="text-gray-300 leading-relaxed">
+    <section class="bg-armadilloGray rounded-lg shadow-lg p-8 text-center">
+      <h1 class="text-3xl font-bold text-oliveGreen mb-4">About Iron Dillo Cybersecurity</h1>
+      <p class="text-armadilloGray leading-relaxed">
         Iron Dillo Cybersecurity is a veteran-owned business dedicated to protecting individuals,
         small businesses, and rural communities across East Texas with practical, trustworthy cybersecurity solutions.
       </p>
     </section>
 
     <!-- Story -->
-    <section class="bg-gray-800 rounded-lg shadow-lg p-8 flex flex-col md:flex-row items-center md:items-start gap-8">
+    <section class="bg-armadilloGray rounded-lg shadow-lg p-8 flex flex-col md:flex-row items-center md:items-start gap-8">
   <!-- Image -->
   <div class="w-40 h-40 md:w-56 md:h-56 flex-shrink-0">
     <img 
@@ -64,13 +82,13 @@
 
   <!-- Text -->
   <div>
-    <h2 class="text-2xl font-semibold text-teal-300 mb-4">Meet Kris McCoy</h2>
-    <p class="text-gray-300 leading-relaxed">
+    <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Meet Kris McCoy</h2>
+    <p class="text-armadilloGray leading-relaxed">
       I served in the U.S. Army in field artillery during Operation Enduring Freedom. After my service,
       I earned a Master of Science in Cybersecurity with distinction and am continuing my education through
       the WGU Business School. Today, I’m proud to be active in the East Texas business community!
     </p>
-    <p class="text-gray-300 leading-relaxed mt-4">
+    <p class="text-armadilloGray leading-relaxed mt-4">
       I am pursuing the CISSP in order to strengthen my ability to serve clients,
       and I bring the same discipline, vigilance, and integrity from my military service into every project.
     </p>
@@ -79,17 +97,17 @@
 
 
     <!-- Ethics Commitment -->
-    <section class="bg-gray-800 rounded-lg shadow-lg p-8">
-      <h2 class="text-2xl font-semibold text-teal-300 mb-4">Commitment to Professional Ethics</h2>
-      <p class="text-gray-300 leading-relaxed">
+    <section class="bg-armadilloGray rounded-lg shadow-lg p-8">
+      <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Commitment to Professional Ethics</h2>
+      <p class="text-armadilloGray leading-relaxed">
         As a member of <span class="font-semibold text-white">ISC2</span>, I keep their 
-        <a href="https://www.isc2.org/Ethics" target="_blank" class="text-teal-400 hover:underline">
+        <a href="https://www.isc2.org/Ethics" target="_blank" class="text-oliveGreen hover:underline">
           Code of Ethics
         </a> close to heart in this work. 
         These principles emphasize protecting society and the common good, acting with honesty and diligence, 
         delivering competent service to those I serve, and advancing the cybersecurity profession for the future.
       </p>
-      <p class="text-gray-300 leading-relaxed mt-4">
+      <p class="text-armadilloGray leading-relaxed mt-4">
         For my clients, this means every engagement is conducted with transparency, responsibility, and 
         a commitment to solutions that put their security and trust first.
       </p>
@@ -97,38 +115,38 @@
 
     <!-- Values -->
     <section class="py-12 grid gap-6 md:grid-cols-3 text-center">
-      <div class="bg-gray-800 p-6 rounded-lg shadow-lg">
-        <h3 class="text-xl font-bold text-teal-400 mb-2">Integrity</h3>
-        <p class="text-gray-300 text-sm">Honest, ethical guidance in every engagement.</p>
+      <div class="bg-armadilloGray p-6 rounded-lg shadow-lg">
+        <h3 class="text-xl font-bold text-oliveGreen mb-2">Integrity</h3>
+        <p class="text-armadilloGray text-sm">Honest, ethical guidance in every engagement.</p>
       </div>
-      <div class="bg-gray-800 p-6 rounded-lg shadow-lg">
-        <h3 class="text-xl font-bold text-teal-400 mb-2">Discipline</h3>
-        <p class="text-gray-300 text-sm">A veteran’s focus on detail and thoroughness.</p>
+      <div class="bg-armadilloGray p-6 rounded-lg shadow-lg">
+        <h3 class="text-xl font-bold text-oliveGreen mb-2">Discipline</h3>
+        <p class="text-armadilloGray text-sm">A veteran’s focus on detail and thoroughness.</p>
       </div>
-      <div class="bg-gray-800 p-6 rounded-lg shadow-lg">
-        <h3 class="text-xl font-bold text-teal-400 mb-2">Resilience</h3>
-        <p class="text-gray-300 text-sm">Helping your business prepare, withstand, and recover from threats.</p>
+      <div class="bg-armadilloGray p-6 rounded-lg shadow-lg">
+        <h3 class="text-xl font-bold text-oliveGreen mb-2">Resilience</h3>
+        <p class="text-armadilloGray text-sm">Helping your business prepare, withstand, and recover from threats.</p>
       </div>
     </section>
 
     <!-- Call to Action -->
-    <section class="bg-gray-900 py-12 text-center">
+    <section class="bg-armadilloBlack py-12 text-center">
       <h2 class="text-2xl font-bold text-white mb-4">Ready to Secure Your Business</h2>
-      <p class="text-gray-300 max-w-xl mx-auto">
+      <p class="text-armadilloGray max-w-xl mx-auto">
         Iron Dillo Cybersecurity is here to provide straightforward, hands-on support for East Texas 
         individuals and businesses. Let’s talk about the right plan for your needs.
       </p>
-      <a href="/contact.html" class="mt-6 inline-block bg-teal-500 text-white px-6 py-3 rounded-lg shadow-lg hover:bg-teal-600 transition">
+      <a href="/contact.html" class="mt-6 inline-block bg-oliveGreen text-white px-6 py-3 rounded-lg shadow-lg hover:bg-oliveDark transition">
         Contact Me Today
       </a>
     </section>
   </main>
 
   <!-- Footer -->
-  <footer class="bg-gray-800 text-gray-500 text-center p-6 mt-auto text-sm max-w-3xl mx-auto rounded-md fade-in">
+  <footer class="bg-armadilloGray text-armadilloGray text-center p-6 mt-auto text-sm max-w-3xl mx-auto rounded-md fade-in">
     &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned | 
-    <a href="/privacy.html" class="hover:underline text-teal-400">Privacy</a> | 
-    <a href="/terms.html" class="hover:underline text-teal-400">Terms</a>
+    <a href="/privacy.html" class="hover:underline text-oliveGreen">Privacy</a> | 
+    <a href="/terms.html" class="hover:underline text-oliveGreen">Terms</a>
   </footer>
 
 </body>
