--- a/commitment.html
+++ b/commitment.html
@@ -8,6 +8,7 @@
 <link rel="preconnect" href="https://cdn.tailwindcss.com">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 <!-- 🛡 Security Headers -->
 <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.tailwindcss.com https://unpkg.com https://www.google.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://fonts.googleapis.com; img-src 'self' data:; font-src 'self' https://fonts.gstatic.com; frame-src https://www.google.com; form-action 'self' https://formspree.io; object-src 'none'; base-uri 'self';">
 <meta http-equiv="X-Content-Type-Options" content="nosniff">
@@ -18,9 +19,26 @@
   <link rel="icon" type="image/x-icon" href="/assets/favicon.png" />
   <link rel="canonical" href="https://irondillo.com/commitment.html" />
   <script src="https://cdn.tailwindcss.com"></script>
+  tailwind.config = {
+    theme: {
+      extend: {
+        colors: {
+          armadilloBlack: "#1A1A1A",
+          armadilloGray: "#4A4A4A",
+          oliveGreen: "#6B7B3C",
+          oliveDark: "#55622F",
+          offWhite: "#F8F9FA"
+        },
+        fontFamily: {
+          inter: ["Inter", "sans-serif"]
+        }
+      }
+    }
+  };
+</script>
 </head>
 
-<body class="flex flex-col min-h-screen bg-gray-900 text-gray-100 font-sans">
+<body class="flex flex-col min-h-screen bg-armadilloBlack text-offWhite font-inter">
 
   <!-- Logo Header -->
   <header class="text-center pt-8">
@@ -28,20 +46,20 @@
   </header>
 
   <!-- Navigation -->
-  <nav class="bg-gray-800 py-3 rounded-md mb-8 max-w-xl mx-auto">
+  <nav class="bg-armadilloGray py-3 rounded-md mb-8 max-w-xl mx-auto">
     <div class="flex justify-between">
-      <a href="/index.html" class="text-teal-400 font-semibold hover:underline px-3">Home</a>
-      <a href="/services.html" class="text-teal-400 font-semibold hover:underline px-3">Services</a>
-      <a href="/about.html" class="text-teal-400 font-semibold hover:underline px-3">About</a>
-      <a href="/blog.html" class="text-teal-400 font-semibold hover:underline px-3">Blog</a>
-      <a href="/contact.html" class="text-teal-400 font-semibold hover:underline px-3">Contact</a>
+      <a href="/index.html" class="text-oliveGreen font-semibold hover:underline px-3">Home</a>
+      <a href="/services.html" class="text-oliveGreen font-semibold hover:underline px-3">Services</a>
+      <a href="/about.html" class="text-oliveGreen font-semibold hover:underline px-3">About</a>
+      <a href="/blog.html" class="text-oliveGreen font-semibold hover:underline px-3">Blog</a>
+      <a href="/contact.html" class="text-oliveGreen font-semibold hover:underline px-3">Contact</a>
     </div>
   </nav>
 
   <!-- Main Content -->
   <main class="flex-grow max-w-3xl mx-auto px-6 py-12">
-    <section class="bg-gray-800 rounded-lg shadow-lg p-8 text-gray-300">
-      <h1 class="text-3xl font-extrabold text-teal-400 mb-6">Our Commitment</h1>
+    <section class="bg-armadilloGray rounded-lg shadow-lg p-8 text-armadilloGray">
+      <h1 class="text-3xl font-extrabold text-oliveGreen mb-6">Our Commitment</h1>
 
       <p class="mb-6">
         At Iron Dillo Cybersecurity, integrity and transparency guide everything we do. As a sole proprietor, I provide personalized cybersecurity consulting with your best interests in mind.
@@ -63,10 +81,10 @@
   </main>
 
   <!-- Footer -->
-  <footer class="bg-gray-800 text-gray-500 text-center p-6 mt-auto text-sm max-w-3xl mx-auto rounded-md">
+  <footer class="bg-armadilloGray text-armadilloGray text-center p-6 mt-auto text-sm max-w-3xl mx-auto rounded-md">
     &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned | 
-    <a href="/privacy.html" class="hover:underline text-teal-400">Privacy</a> | 
-    <a href="/terms.html" class="hover:underline text-teal-400">Terms</a>
+    <a href="/privacy.html" class="hover:underline text-oliveGreen">Privacy</a> | 
+    <a href="/terms.html" class="hover:underline text-oliveGreen">Terms</a>
   </footer>
 
 </body>
