--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
 <link rel="preconnect" href="https://cdn.tailwindcss.com">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 <!-- 🛡 Security Headers -->
 <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.tailwindcss.com https://unpkg.com https://www.google.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://fonts.googleapis.com; img-src 'self' data:; font-src 'self' https://fonts.gstatic.com; frame-src https://www.google.com; form-action 'self' https://formspree.io; object-src 'none'; base-uri 'self';">
 <meta http-equiv="X-Content-Type-Options" content="nosniff">
@@ -18,11 +19,29 @@
   
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
+<script>
+  tailwind.config = {
+    theme: {
+      extend: {
+        colors: {
+          armadilloBlack: "#1A1A1A",
+          armadilloGray: "#4A4A4A",
+          oliveGreen: "#6B7B3C",
+          oliveDark: "#55622F",
+          offWhite: "#F8F9FA"
+        },
+        fontFamily: {
+          inter: ["Inter", "sans-serif"]
+        }
+      }
+    }
+  };
+</script>
   
   <!-- Google reCAPTCHA v2 -->
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
-<body class="bg-gray-900 text-gray-100 min-h-screen flex flex-col font-sans">
+<body class="bg-armadilloBlack text-offWhite min-h-screen flex flex-col font-inter">
 
   <!-- Header -->
   <header class="text-center pt-8 max-w-3xl mx-auto">
@@ -30,19 +49,19 @@
   </header>
 
   <!-- Navigation -->
-  <nav class="bg-gray-800 py-3 rounded-md mb-8 max-w-xl mx-auto">
+  <nav class="bg-armadilloGray py-3 rounded-md mb-8 max-w-xl mx-auto">
     <div class="flex justify-between">
-      <a href="/index.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Home</a>
-      <a href="/services.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Services</a>
-      <a href="/about.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">About</a>
-      <a href="/contact.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Contact</a>
+      <a href="/index.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">Home</a>
+      <a href="/services.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">Services</a>
+      <a href="/about.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">About</a>
+      <a href="/contact.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">Contact</a>
     </div>
   </nav>
 
   <!-- Main Contact Form -->
-  <main class="flex-grow max-w-xl w-full bg-gray-800 rounded-lg p-8 shadow-lg mx-auto">
-    <h1 class="text-4xl font-extrabold text-teal-400 mb-6 text-center">Contact Iron Dillo</h1>
-    <p class="text-gray-300 mb-8 text-center">
+  <main class="flex-grow max-w-xl w-full bg-armadilloGray rounded-lg p-8 shadow-lg mx-auto">
+    <h1 class="text-4xl font-extrabold text-oliveGreen mb-6 text-center">Contact Iron Dillo</h1>
+    <p class="text-armadilloGray mb-8 text-center">
       Have a cybersecurity question? Want to schedule a consult? Fill out the form below and I’ll respond as soon as possible.
     </p>
 
@@ -60,39 +79,39 @@
       </div>
 
       <div>
-        <label for="name" class="block mb-2 font-semibold text-teal-400">Your Name</label>
+        <label for="name" class="block mb-2 font-semibold text-oliveGreen">Your Name</label>
         <input
           type="text"
           name="name"
           id="name"
           required
-          class="w-full p-3 rounded bg-gray-900 border border-gray-700 text-gray-100 focus:outline-none focus:ring-2 focus:ring-teal-400"
+          class="w-full p-3 rounded bg-armadilloBlack border border-armadilloGray text-offWhite focus:outline-none focus:ring-2 focus:ring-oliveGreen"
           placeholder="Jane Doe"
           autocomplete="name"
         />
       </div>
 
       <div>
-        <label for="email" class="block mb-2 font-semibold text-teal-400">Your Email</label>
+        <label for="email" class="block mb-2 font-semibold text-oliveGreen">Your Email</label>
         <input
           type="email"
           name="_replyto"
           id="email"
           required
-          class="w-full p-3 rounded bg-gray-900 border border-gray-700 text-gray-100 focus:outline-none focus:ring-2 focus:ring-teal-400"
+          class="w-full p-3 rounded bg-armadilloBlack border border-armadilloGray text-offWhite focus:outline-none focus:ring-2 focus:ring-oliveGreen"
           placeholder="you@example.com"
           autocomplete="email"
         />
       </div>
 
       <div>
-        <label for="message" class="block mb-2 font-semibold text-teal-400">Message</label>
+        <label for="message" class="block mb-2 font-semibold text-oliveGreen">Message</label>
         <textarea
           name="message"
           id="message"
           rows="5"
           required
-          class="w-full p-3 rounded bg-gray-900 border border-gray-700 text-gray-100 focus:outline-none focus:ring-2 focus:ring-teal-400"
+          class="w-full p-3 rounded bg-armadilloBlack border border-armadilloGray text-offWhite focus:outline-none focus:ring-2 focus:ring-oliveGreen"
           placeholder="Write your message here..."
         ></textarea>
       </div>
@@ -105,7 +124,7 @@
 
       <button
         type="submit"
-        class="w-full mt-4 bg-teal-400 text-gray-900 font-extrabold py-3 rounded hover:bg-teal-500 transition-colors duration-200"
+        class="w-full mt-4 bg-oliveGreen text-gray-900 font-extrabold py-3 rounded hover:bg-oliveDark transition-colors duration-200"
       >
         Send Message
       </button>
@@ -113,10 +132,10 @@
   </main>
 
   <!-- Footer -->
-  <footer class="bg-gray-800 text-gray-500 text-center p-6 mt-8 text-sm max-w-3xl mx-auto rounded-md">
+  <footer class="bg-armadilloGray text-armadilloGray text-center p-6 mt-8 text-sm max-w-3xl mx-auto rounded-md">
     &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned | 
-    <a href="/privacy.html" class="hover:underline text-teal-400">Privacy</a> | 
-    <a href="/terms.html" class="hover:underline text-teal-400">Terms</a>
+    <a href="/privacy.html" class="hover:underline text-oliveGreen">Privacy</a> | 
+    <a href="/terms.html" class="hover:underline text-oliveGreen">Terms</a>
   </footer>
 
   <script>
